crates/rome_cli/tests/snapshots/formatter_write.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages


