crates/rome_cli/tests/snapshots/formatting_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `ci.js`

```js
  statement(  )  
```

# Emitted Messages

```block
ci.js: error[CI]: File content differs from formatting output
    | @@ -1 +1 @@
0   | -   statement(  )
  0 | + statement();

```


