crates/rome_cli/tests/snapshots/incorrect_globals.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": false
  },
  "javascript": {
    "globals": [false]
  }
}
```


