crates/rome_cli/tests/snapshots/incorrect_rule_name.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
        "js": {
            "foo_rule": "off"
        },
        "jsx": {
            "what_the_hell": "off"
        }
    }
  }
}
```


