crates/rome_cli/tests/snapshots/line_width_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "lineWidth": 500
  }
}
```


